@@ -1,0 +1,75 @@
+/*****************************************************************************\
+ *                        ANALYSIS PERFORMANCE TOOLS                         *
+ *                             ClusteringSuite                               *
+ *   Infrastructure and tools to apply clustering analysis to Paraver and    *
+ *                              Dimemas traces                               *
+ *                                                                           *
+ *****************************************************************************
+ *     ___     This library is free software; you can redistribute it and/or *
+ *    /  __         modify it under the terms of the GNU LGPL as published   *
+ *   /  /  _____    by the Free Software Foundation; either version 2.1      *
+ *  /  /  /     \   of the License, or (at your option) any later version.   *
+ * (  (  ( B S C )                                                           *
+ *  \  \  \_____/   This library is distributed in hope that it will be      *
+ *   \  \__         useful but WITHOUT ANY WARRANTY; without even the        *
+ *    \___          implied warranty of MERCHANTABILITY or FITNESS FOR A     *
+ *                  PARTICULAR PURPOSE. See the GNU LGPL for more details.   *
+ *                                                                           *
+ * You should have received a copy of the GNU Lesser General Public License  *
+ * along with this library; if not, write to the Free Software Foundation,   *
+ * Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA          *
+ * The GNU LEsser General Public License is contained in the file COPYING.   *
+ *                                 ---------                                 *
+ *   Barcelona Supercomputing Center - Centro Nacional de Supercomputacion   *
+\*****************************************************************************/
+
+/* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- *\
+
+  $Id:: Timer.hpp 23 2011-05-17 09:47:12Z jgonzal#$:  Id
+  $Rev:: 23                                       $:  Revision of last commit
+  $Author:: jgonzale                              $:  Author of last commit
+  $Date:: 2011-05-17 11:47:12 +0200 (Tue, 17 May #$:  Date of last commit
+
+\* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
+
+#include "Timer.hpp"
+
+#include <iostream>
+using std::cout;
+using std::endl;
+
+using cepba_tools::Timer;
+
+Timer::Timer()
+{
+  begin();
+}
+
+void Timer::begin()
+{
+  gettimeofday(&time_start, 0);
+
+  elapsed = 0;
+}
+
+Timer::diff_type Timer::end()
+{
+  struct timeval time_end;
+  struct timeval time_elapsed;
+
+  gettimeofday(&time_end, 0);
+
+  timersub(&time_end, &time_start, &time_elapsed);
+
+  elapsed = time_elapsed.tv_sec * 1000000 + time_elapsed.tv_usec;
+
+  return elapsed;
+}
+/*
+cepba_tools::Timer::diff_type cepba_tools::Timer::end()
+{
+  elapsed = (diff_type) std::clock() - start;
+  elapsed /= CLOCKS_PER_SEC;
+  return elapsed;
+}
+*/
