@@ -10,6 +10,13 @@ YYYY-MM-DD  John Doe  <johndoe@example.com>
 
 	* anotherfile.ext (somefunction): more changes
 
+2011-12-15 Juan Gonzalez <juan.gonzalez@bsc.es>
+	* Added 'Timer.cpp' forgotten in last commits
+
+	* Modifications in the TreeDBSCAN backend messages
+
+	* Corrected a bug when printing global/local data on libDistributedClustering
+
 2011-12-13 Juan Gonzalez <juan.gonzalez@bsc.es>
 	* Modifications to print same timing information in TreeDBSCAN and
 	BurstClustering
